MODSOURCE-832: In Handling Authority-Instance links events, make updating Bib fields consistent for having two or more event consumers. (#663)
* MODSOURCE-832: add consistent authority-instance link event handling and updating for same Marc Bib records by two or more consumers (module instances)